# simple-config-server

./: .gitignore  ARCHITECTURE-ENV-SPLIT.md  CHANGELOG.md  Cargo.toml  README.md
src/: main.rs
templates/: ui.html
